[package]
name = "triple_triad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
crevice = "0.13.0"
ggez = "0.9.0-rc0"
mint = "0.5.9"
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "3.0.0"
tween = "2.0.1"
wgpu = "0.14.0"
wgpu-types = "0.16.0"
